--- a/stories/manifest.json
+++ b/stories/manifest.json
@@ -1,5 +1,10 @@
 {
   "stories": [
-    "DRPG1-Project-at-the-Edge"
+    "DRPG1-Project-at-the-Edge",
+    "DRPG2-New-CEO-Assistant",
+    "DRPG3-underperforming-team",
+    "DRPG4-Budget-Cut",
+    "DRPG5-Ethical-Dilemma",
+    "DRPG6-Ethical-Crossroads"
   ]
 }
