--- a/stories/manifest.json
+++ b/stories/manifest.json
@@ -5,6 +5,12 @@
     "DRPG3-underperforming-team",
     "DRPG4-Budget-Cut",
     "DRPG5-Ethical-Dilemma",
-    "DRPG6-Ethical-Crossroads"
+    "DRPG6-Ethical-Crossroads",
+    "DRPG7-Team-Rebellion",
+    "DRPG8-Promotion-Trap",
+    "DRPG9-Burnout-Spiral",
+    "DRPG10-Merger-Announcement",
+    "DRPG11-The-Promotion-You-Didnt-Get",
+    "DRPG12-Toxic-Star-Performer"
   ]
 }
